--- a/src/style.css
+++ b/src/style.css
@@ -14,10 +14,13 @@ hc-event-tags {
   width: 25rem;
   height: 1.5rem;
   overflow: hidden;
+  background: white;
 }
 hc-event-tags:hover {
   height: auto;
   z-index: 100;
+  background: #0058a37d;
+  transition: background 1s linear;
 }
 hc-event-tags ul {
   margin: 0;
