Moving styles out of the component's style sheet, make it less restricitve and more flexible.

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,12 @@
 hc-event {
   display: block;
-  margin-bottom: 1rem;
 }
 hc-event-tags {
   position: absolute;
   width: 25rem;
   height: 1.5rem;
   overflow: hidden;
-  background: white;
+  background: inherit;
 }
 hc-event-tags:hover {
   height: auto;
